# bi_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/: architecture.md  copilot-instructions.md  langraph.md  mcp.md
backend/: Dockerfile  mcp_client.py  requirements.txt  start.sh
backend/agent/: Dockerfile  app.py  graph.py  main.py  prompts.py  requirements.txt  state.py
backend/agent/api/: routes.py  schemas.py
backend/agent/app/: graph.py  main.py
backend/agent/config/: prompts.py
backend/agent/nodes/: call_model.py  guardrail.py  guardrail_node.py  handle_tool_result.py  query_database.py  retry.py  security_warning.py  should_continue.py  summarize.py
backend/agent/routers/: guardrail.py  query_database.py  tool_execution.py
backend/core/: logger.py  openai_client.py  schemas.py
backend/core/llm/: __init__.py  base.py  factory.py
backend/core/llm/engines/: __init__.py  langchain_anthropic.py  langchain_openai.py
backend/mcp/: Dockerfile  client.py  requirements.txt  server.py  utils.py
backend/mcp/app/: main.py
backend/mcp/tools/: describe_table.py  execute_readonly_query.py  list_tables.py
backend/postgres/: connection.py  db_url.py
backend/postgres/init/: 001_schema.sql  002_seed_data.sql  003_roles.sql
backend/utils/: parsing.py
docker/agent/: Dockerfile
docker/mcp/: Dockerfile
docker/postgres/: init.sql
frontend/chatbot/: Dockerfile  app.py  requirements.txt
tests/: test_graph_retry.py  test_mcp_server.py
